--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
         <title>React App</title>
     </head>
     <body>
-        <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
+        <!-- <div id="root"></div> -->
+        <button id="add">Add</button>
+        <span>0</span>
+        <button id="minus">Minus</button>
     </body>
 </html>
